// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RippleStoryshots Molecules/Card/Card Box Default 1`] = `
<div
  class="rpl-card-box"
>
  <!---->
   
  <div
    class="rpl-card-box__items"
  >
    <div
      class="rpl-card-box__item"
    >
      <div
        class="rpl-card-emergency"
      >
        <div
          class="rpl-card-emergency__content"
        >
          <div
            class="rpl-card-emergency__subtitle"
          >
            <span>
              Urgent
            </span>
          </div>
           
          <h2
            class="rpl-card-emergency__title"
          >
            Emergency Assistance
          </h2>
           
          <p
            class="rpl-card-emergency__summary"
          >
            Dial 000 for police, fire & ambulance
          </p>
        </div>
         
        <div
          class="rpl-card-emergency__cta"
        >
          <span
            class="rpl-card-emergency__separator"
          />
           
          <a
            class="rpl-link rpl-card-emergency__cta-link"
            data-print-url="tel:0000"
            href="tel:0000"
          >
            <svg
              aria-hidden="true"
              class="rpl-icon rpl-icon--phone_number rpl-icon--color_primary"
              overflow="visible"
              style="width: 14.700000000000001px; height: 14.700000000000001px;"
              viewBox="0 0 14 14"
            >
              <path
                d="M13.7383 10.6808L11.4212 8.35068C11.0707 7.99766 10.499 7.99766 10.1485 8.34889L8.0893 10.4069L3.59525 5.91543L5.65712 3.85477C6.00766 3.50444 6.00855 2.93582 5.65802 2.58459L3.33908 0.263422C2.98765 -0.0878074 2.4187 -0.0878074 2.06727 0.263422L0.00359525 2.32499L0 2.32229C0 8.77198 5.23108 14 11.6845 14L13.7365 11.9492C14.0871 11.598 14.088 11.0321 13.7383 10.6808Z"
              />
               
            </svg>
             
            <span
              class="rpl-card-emergency__cta-link-text"
            >
              
        Call 0000
      
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      class="rpl-card-box__item"
    >
      <div
        class="rpl-card-emergency"
      >
        <div
          class="rpl-card-emergency__content"
        >
          <div
            class="rpl-card-emergency__subtitle"
          >
            <span>
              Urgent
            </span>
          </div>
           
          <h2
            class="rpl-card-emergency__title"
          >
            Police Assistance Line
          </h2>
           
          <p
            class="rpl-card-emergency__summary"
          >
            Dial 000 for police, fire & ambulance
          </p>
        </div>
         
        <div
          class="rpl-card-emergency__cta"
        >
          <span
            class="rpl-card-emergency__separator"
          />
           
          <a
            class="rpl-link rpl-card-emergency__cta-link"
            data-print-url="tel:000"
            href="tel:000"
          >
            <svg
              aria-hidden="true"
              class="rpl-icon rpl-icon--phone_number rpl-icon--color_primary"
              overflow="visible"
              style="width: 14.700000000000001px; height: 14.700000000000001px;"
              viewBox="0 0 14 14"
            >
              <path
                d="M13.7383 10.6808L11.4212 8.35068C11.0707 7.99766 10.499 7.99766 10.1485 8.34889L8.0893 10.4069L3.59525 5.91543L5.65712 3.85477C6.00766 3.50444 6.00855 2.93582 5.65802 2.58459L3.33908 0.263422C2.98765 -0.0878074 2.4187 -0.0878074 2.06727 0.263422L0.00359525 2.32499L0 2.32229C0 8.77198 5.23108 14 11.6845 14L13.7365 11.9492C14.0871 11.598 14.088 11.0321 13.7383 10.6808Z"
              />
               
            </svg>
             
            <span
              class="rpl-card-emergency__cta-link-text"
            >
              
        Call 000
      
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      class="rpl-card-box__item"
    >
      <div
        class="rpl-card-emergency"
      >
        <div
          class="rpl-card-emergency__content"
        >
          <div
            class="rpl-card-emergency__subtitle"
          >
            <span>
              Urgent
            </span>
          </div>
           
          <h2
            class="rpl-card-emergency__title"
          >
            Police Assistance Line
          </h2>
           
          <p
            class="rpl-card-emergency__summary"
          >
            Dial 000 for police, fire & ambulance
          </p>
        </div>
         
        <div
          class="rpl-card-emergency__cta"
        >
          <span
            class="rpl-card-emergency__separator"
          />
           
          <a
            class="rpl-link rpl-card-emergency__cta-link"
            data-print-url="/home"
            href="/home"
          >
            <svg
              aria-hidden="true"
              class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary"
              overflow="visible"
              style="width: 13.65px; height: 12.600000000000001px;"
              viewBox="0 0 13 12"
            >
              <path
                d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
              />
               
            </svg>
             
            <span
              class="rpl-card-emergency__cta-link-text"
            >
              
        Internal link
      
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      class="rpl-card-box__item"
    >
      <div
        class="rpl-card-emergency"
      >
        <div
          class="rpl-card-emergency__content"
        >
          <!---->
           
          <h2
            class="rpl-card-emergency__title"
          >
            Police Assistance Line
          </h2>
           
          <p
            class="rpl-card-emergency__summary"
          >
            Dial 000 for police, fire & ambulance
          </p>
        </div>
         
        <div
          class="rpl-card-emergency__cta"
        >
          <span
            class="rpl-card-emergency__separator"
          />
           
          <a
            class="rpl-link rpl-card-emergency__cta-link"
            data-print-url="http://google.com"
            href="http://google.com"
          >
            <svg
              aria-hidden="true"
              class="rpl-icon rpl-icon--external_link rpl-icon--color_primary"
              overflow="visible"
              style="width: 14.700000000000001px; height: 14.700000000000001px;"
              viewBox="0 0 14 14"
            >
              <path
                d="M14 1.53906V12.6016C14 13.3008 13.3008 14 12.4609 14H1.53906C0.699219 14 0 13.3008 0 12.4609V1.53906C0 0.699219 0.699219 0 1.53906 0H12.6016C13.3008 0 14 0.699219 14 1.53906ZM11.1992 1.96094H7.69922C7.14063 1.96094 6.71875 2.80078 7.28125 3.21875L8.26172 4.19922L2.10156 10.3594C1.96094 10.5 1.96094 10.7812 2.10156 10.9219L3.07812 11.8984C3.21875 12.0391 3.5 12.0391 3.64062 11.8984L9.80078 5.73828L10.7812 6.71875C11.1992 7.28125 12.0391 6.85937 12.0391 6.30078V2.80078C12.0391 2.37891 11.6211 1.96094 11.1992 1.96094Z"
              />
               
            </svg>
             
            <span
              class="rpl-card-emergency__cta-link-text"
            >
              
        External link
      
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Card/Card Carousel Default 1`] = `
<div
  class="rpl-card-carousel"
>
  <!---->
   
  <h2
    class="rpl-card-carousel__title"
  >
    Featured Content
  </h2>
   
  <div
    class="rpl-card-carousel__slider"
  >
    <div
      class="VueCarousel"
    >
      <div
        class="VueCarousel-wrapper"
      >
        <div
          class="VueCarousel-inner"
          style="transform: translate(0px, 0); transition: 0.5s ease transform; flex-basis: 0px; visibility: hidden; height: auto;"
        >
          <div
            class="VueCarousel-slide rpl-card-carousel__slide VueCarousel-slide-active"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-event rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <div
                  class="rpl-card-content__image-wrapper"
                >
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__details"
                >
                  <div
                    class="rpl-card-event__meta"
                  >
                    <div
                      class="rpl-card-event__date"
                    >
                      10 July
                    </div>
                  </div>
                   
                  <h2
                    class="rpl-card-event__title"
                  >
                    This is the headline of an event
                  </h2>
                   
                  <div
                    class="rpl-card-event__trim-wrapper"
                    style="max-height: none;"
                  >
                    <p
                      class="rpl-card-event__summary"
                    >
                      Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet, consecteten dolor lorem ipsum dolor sit amet, consecte
                    </p>
                  </div>
                   
                  <p
                    class="rpl-card-event__location"
                  >
                    <svg
                      aria-hidden="true"
                      class="rpl-icon rpl-icon--map_marker rpl-icon--color_secondary"
                      overflow="visible"
                      style="width: 9px; height: 12px;"
                      viewBox="0 0 12 16"
                    >
                      <path
                        d="M0 6C0 10.41 6 16 6 16C6 16 12 10.41 12 6C12 2.7492 9.31714 0 6 0C2.68286 0 0 2.7492 0 6ZM3.75 6C3.75 4.758 4.758 3.75 6 3.75C7.242 3.75 8.25 4.758 8.25 6C8.25 7.242 7.242 8.25 6 8.25C4.758 8.25 3.75 7.242 3.75 6Z"
                      />
                       
                    </svg>
                    South Yarra
                  </p>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See event
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       details
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            class="VueCarousel-slide rpl-card-carousel__slide VueCarousel-slide-active VueCarousel-slide-center"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-keydates rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <!---->
                 
                <div
                  class="rpl-card-content__details"
                >
                  <h2
                    class="rpl-card-keydates__title"
                  >
                    Key calendar dates
                  </h2>
                   
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
                        overflow="visible"
                        style="width: 18px; height: 18px;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 16H16V5H2V16ZM17 2H15V1.01C15 0.452 14.553 0 14 0C13.447 0 13 0.452 13 1.01V2H5V1.01C5 0.452 4.553 0 4 0C3.447 0 3 0.452 3 1.01V2H1C0.447 2 0 2.447 0 3V17C0 17.552 0.447 18 1 18H17C17.553 18 18 17.552 18 17V3C18 2.447 17.553 2 17 2ZM10 14.021H14V10.021H10V14.021Z"
                          fill-rule="evenodd"
                        />
                         
                      </svg>
                       
                      <span>
                        3 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      Term two starts
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      Its back to the classroom as school start term two on the 16th April.
                    </p>
                  </div>
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
                        overflow="visible"
                        style="width: 18px; height: 18px;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 16H16V5H2V16ZM17 2H15V1.01C15 0.452 14.553 0 14 0C13.447 0 13 0.452 13 1.01V2H5V1.01C5 0.452 4.553 0 4 0C3.447 0 3 0.452 3 1.01V2H1C0.447 2 0 2.447 0 3V17C0 17.552 0.447 18 1 18H17C17.553 18 18 17.552 18 17V3C18 2.447 17.553 2 17 2ZM10 14.021H14V10.021H10V14.021Z"
                          fill-rule="evenodd"
                        />
                         
                      </svg>
                       
                      <span>
                        23 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      ANZAC Day
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      National day of remembrance to commemorate the ANZACs.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See the events
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       calendar
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            class="VueCarousel-slide rpl-card-carousel__slide VueCarousel-slide-active"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-promotion rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <div
                  class="rpl-card-content__image-wrapper"
                >
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__details"
                >
                  <div
                    class="rpl-card-promotion__meta"
                  >
                    <div
                      class="rpl-card-promotion__date"
                    >
                      10 July
                    </div>
                     
                    <div
                      class="rpl-card-promotion__tag"
                    >
                      News
                    </div>
                  </div>
                   
                  <h2
                    class="rpl-card-promotion__title"
                  >
                    This is display copy that wraps 2 lines
                  </h2>
                   
                  <div
                    class="rpl-card-promotion__trim-wrapper"
                    style="max-height: none;"
                  >
                    <p
                      class="rpl-card-promotion__summary"
                    >
                      We are looking at ways to make housing more affordable and renting more secure. Tell us what works for you or find out what's happening.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      Read
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       more
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-event rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <div
                  class="rpl-card-content__image-wrapper"
                >
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__details"
                >
                  <div
                    class="rpl-card-event__meta"
                  >
                    <div
                      class="rpl-card-event__date"
                    >
                      10 to 15 July
                    </div>
                  </div>
                   
                  <h2
                    class="rpl-card-event__title"
                  >
                    This is the headline of an event
                  </h2>
                   
                  <div
                    class="rpl-card-event__trim-wrapper"
                    style="max-height: none;"
                  >
                    <p
                      class="rpl-card-event__summary"
                    >
                      Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet, consecteten dolor lorem ipsum dolor sit amet, consecte
                    </p>
                  </div>
                   
                  <p
                    class="rpl-card-event__location"
                  >
                    <svg
                      aria-hidden="true"
                      class="rpl-icon rpl-icon--map_marker rpl-icon--color_secondary"
                      overflow="visible"
                      style="width: 9px; height: 12px;"
                      viewBox="0 0 12 16"
                    >
                      <path
                        d="M0 6C0 10.41 6 16 6 16C6 16 12 10.41 12 6C12 2.7492 9.31714 0 6 0C2.68286 0 0 2.7492 0 6ZM3.75 6C3.75 4.758 4.758 3.75 6 3.75C7.242 3.75 8.25 4.758 8.25 6C8.25 7.242 7.242 8.25 6 8.25C4.758 8.25 3.75 7.242 3.75 6Z"
                      />
                       
                    </svg>
                    South Yarra
                  </p>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See event
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       details
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-event rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <div
                  class="rpl-card-content__image-wrapper"
                >
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__details"
                >
                  <div
                    class="rpl-card-event__meta"
                  >
                    <div
                      class="rpl-card-event__date"
                    >
                      10 July to 10 September 2018
                    </div>
                  </div>
                   
                  <h2
                    class="rpl-card-event__title"
                  >
                    This is the headline of an event
                  </h2>
                   
                  <div
                    class="rpl-card-event__trim-wrapper"
                    style="max-height: none;"
                  >
                    <p
                      class="rpl-card-event__summary"
                    >
                      Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet, consecteten dolor lorem ipsum dolor sit amet, consecte
                    </p>
                  </div>
                   
                  <p
                    class="rpl-card-event__location"
                  >
                    <svg
                      aria-hidden="true"
                      class="rpl-icon rpl-icon--map_marker rpl-icon--color_secondary"
                      overflow="visible"
                      style="width: 9px; height: 12px;"
                      viewBox="0 0 12 16"
                    >
                      <path
                        d="M0 6C0 10.41 6 16 6 16C6 16 12 10.41 12 6C12 2.7492 9.31714 0 6 0C2.68286 0 0 2.7492 0 6ZM3.75 6C3.75 4.758 4.758 3.75 6 3.75C7.242 3.75 8.25 4.758 8.25 6C8.25 7.242 7.242 8.25 6 8.25C4.758 8.25 3.75 7.242 3.75 6Z"
                      />
                       
                    </svg>
                    South Yarra
                  </p>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See event
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       details
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-keydates rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <!---->
                 
                <div
                  class="rpl-card-content__details"
                >
                  <h2
                    class="rpl-card-keydates__title"
                  >
                    Key calendar dates
                  </h2>
                   
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
                        overflow="visible"
                        style="width: 18px; height: 18px;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 16H16V5H2V16ZM17 2H15V1.01C15 0.452 14.553 0 14 0C13.447 0 13 0.452 13 1.01V2H5V1.01C5 0.452 4.553 0 4 0C3.447 0 3 0.452 3 1.01V2H1C0.447 2 0 2.447 0 3V17C0 17.552 0.447 18 1 18H17C17.553 18 18 17.552 18 17V3C18 2.447 17.553 2 17 2ZM10 14.021H14V10.021H10V14.021Z"
                          fill-rule="evenodd"
                        />
                         
                      </svg>
                       
                      <span>
                        3 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      Term two starts
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      Its back to the classroom as school start term two on the 16th April.
                    </p>
                  </div>
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
                        overflow="visible"
                        style="width: 18px; height: 18px;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 16H16V5H2V16ZM17 2H15V1.01C15 0.452 14.553 0 14 0C13.447 0 13 0.452 13 1.01V2H5V1.01C5 0.452 4.553 0 4 0C3.447 0 3 0.452 3 1.01V2H1C0.447 2 0 2.447 0 3V17C0 17.552 0.447 18 1 18H17C17.553 18 18 17.552 18 17V3C18 2.447 17.553 2 17 2ZM10 14.021H14V10.021H10V14.021Z"
                          fill-rule="evenodd"
                        />
                         
                      </svg>
                       
                      <span>
                        23 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      ANZAC Day
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      National day of remembrance to commemorate the ANZACs.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See the events
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       calendar
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-promotion rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <div
                  class="rpl-card-content__image-wrapper"
                >
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__details"
                >
                  <div
                    class="rpl-card-promotion__meta"
                  >
                    <div
                      class="rpl-card-promotion__date"
                    >
                      10 July
                    </div>
                     
                    <div
                      class="rpl-card-promotion__tag"
                    >
                      News
                    </div>
                  </div>
                   
                  <h2
                    class="rpl-card-promotion__title"
                  >
                    This is display copy that wraps 2 lines
                  </h2>
                   
                  <div
                    class="rpl-card-promotion__trim-wrapper"
                    style="max-height: none;"
                  >
                    <p
                      class="rpl-card-promotion__summary"
                    >
                      Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet, consecteten dolor at vero eos et accusamus et iusto odio dignis.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      Read
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       more
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-keydates rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <!---->
                 
                <div
                  class="rpl-card-content__details"
                >
                  <h2
                    class="rpl-card-keydates__title"
                  >
                    Key calendar dates
                  </h2>
                   
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
                        overflow="visible"
                        style="width: 18px; height: 18px;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 16H16V5H2V16ZM17 2H15V1.01C15 0.452 14.553 0 14 0C13.447 0 13 0.452 13 1.01V2H5V1.01C5 0.452 4.553 0 4 0C3.447 0 3 0.452 3 1.01V2H1C0.447 2 0 2.447 0 3V17C0 17.552 0.447 18 1 18H17C17.553 18 18 17.552 18 17V3C18 2.447 17.553 2 17 2ZM10 14.021H14V10.021H10V14.021Z"
                          fill-rule="evenodd"
                        />
                         
                      </svg>
                       
                      <span>
                        3 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      Term two starts
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      Its back to the classroom as school start term two on the 16th April.
                    </p>
                  </div>
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
                        overflow="visible"
                        style="width: 18px; height: 18px;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 16H16V5H2V16ZM17 2H15V1.01C15 0.452 14.553 0 14 0C13.447 0 13 0.452 13 1.01V2H5V1.01C5 0.452 4.553 0 4 0C3.447 0 3 0.452 3 1.01V2H1C0.447 2 0 2.447 0 3V17C0 17.552 0.447 18 1 18H17C17.553 18 18 17.552 18 17V3C18 2.447 17.553 2 17 2ZM10 14.021H14V10.021H10V14.021Z"
                          fill-rule="evenodd"
                        />
                         
                      </svg>
                       
                      <span>
                        23 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      ANZAC Day
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      National day of remembrance to commemorate the ANZACs.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See the events
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       calendar
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-keydates rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <!---->
                 
                <div
                  class="rpl-card-content__details"
                >
                  <h2
                    class="rpl-card-keydates__title"
                  >
                    Key calendar dates
                  </h2>
                   
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
                        overflow="visible"
                        style="width: 18px; height: 18px;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 16H16V5H2V16ZM17 2H15V1.01C15 0.452 14.553 0 14 0C13.447 0 13 0.452 13 1.01V2H5V1.01C5 0.452 4.553 0 4 0C3.447 0 3 0.452 3 1.01V2H1C0.447 2 0 2.447 0 3V17C0 17.552 0.447 18 1 18H17C17.553 18 18 17.552 18 17V3C18 2.447 17.553 2 17 2ZM10 14.021H14V10.021H10V14.021Z"
                          fill-rule="evenodd"
                        />
                         
                      </svg>
                       
                      <span>
                        3 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      Term two starts
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      Its back to the classroom as school start term two on the 16th April.
                    </p>
                  </div>
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
                        overflow="visible"
                        style="width: 18px; height: 18px;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 16H16V5H2V16ZM17 2H15V1.01C15 0.452 14.553 0 14 0C13.447 0 13 0.452 13 1.01V2H5V1.01C5 0.452 4.553 0 4 0C3.447 0 3 0.452 3 1.01V2H1C0.447 2 0 2.447 0 3V17C0 17.552 0.447 18 1 18H17C17.553 18 18 17.552 18 17V3C18 2.447 17.553 2 17 2ZM10 14.021H14V10.021H10V14.021Z"
                          fill-rule="evenodd"
                        />
                         
                      </svg>
                       
                      <span>
                        23 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      ANZAC Day
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      National day of remembrance to commemorate the ANZACs.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See the events
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       calendar
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
       
      <!---->
       
      <!---->
    </div>
     
    <div
      class="rpl-card-carousel__navigation"
    >
      <button
        aria-label="Go to previous slide"
        class="rpl-card-carousel__navigation-button rpl-card-carousel__navigation-button--prev"
        disabled="disabled"
        role="button"
      >
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--arrow_left_secondary rpl-icon--color_mid_neutral_1"
          overflow="visible"
          style="width: 19.200000000000003px; height: 35.2px;"
          viewBox="0 0 12 22"
        >
          <path
            d="M10.7474 2.66437C11.1143 2.25158 11.0771 1.61952 10.6644 1.2526C10.2516 0.88568 9.6195 0.922869 9.25258 1.33565L1.25258 10.3356C0.91579 10.7145 0.91579 11.2855 1.25258 11.6644L9.25258 20.6644C9.6195 21.0771 10.2516 21.1143 10.6644 20.7474C11.0771 20.3805 11.1143 19.7484 10.7474 19.3356L3.33794 11L10.7474 2.66437Z"
          />
           
        </svg>
      </button>
       
      <button
        aria-label="Go to next slide"
        class="rpl-card-carousel__navigation-button rpl-card-carousel__navigation-button--next"
        role="button"
      >
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--arrow_right_secondary rpl-icon--color_primary"
          overflow="visible"
          style="width: 19.200000000000003px; height: 35.2px;"
          viewBox="0 0 12 22"
        >
          <path
            d="M1.25262 2.66437C0.8857 2.25158 0.922843 1.61952 1.33563 1.2526C1.74841 0.88568 2.38051 0.922869 2.74743 1.33565L10.7474 10.3356C11.0842 10.7145 11.0842 11.2855 10.7474 11.6644L2.74743 20.6644C2.38051 21.0771 1.74841 21.1143 1.33563 20.7474C0.922843 20.3805 0.8857 19.7484 1.25262 19.3356L8.66204 11L1.25262 2.66437Z"
          />
           
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Card/Card Content (base) Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-content--default rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-content__image-wrapper"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-content__image"
      height="340"
      src="https://placehold.it/580x340"
      style="object-position: 50.00% 50.00%; font-family: 'object-fit: cover; object-position: 50.00% 50.00%;';"
      width="580"
    />
  </div>
   
  <div
    class="rpl-card-content__details"
  >
    <div>
      <h2>
        Custom Content
      </h2>
      <p>
        Lorem ipsum dolor sit amet.
      </p>
    </div>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        Read
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         more
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
          overflow="visible"
          style="width: 9.1px; height: 8.399999999999999px;"
          viewBox="0 0 13 12"
        >
          <path
            d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
          />
           
        </svg>
      </span>
    </span>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Cta Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-cta rpl-card-content--no-image rpl-card-content--default"
  data-print-url="#"
  href="#"
>
  <!---->
   
  <div
    class="rpl-card-content__details"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-cta__image"
      height="148"
      src="https://placehold.it/148x148"
      style="object-position: 100% 100%; font-family: 'object-fit: cover; object-position: 100% 100%;';"
      width="148"
    />
     
    <h2
      class="rpl-card-cta__title"
    >
      Want to submit an event?
    </h2>
     
    <div
      class="rpl-card-cta__trim-wrapper"
      style="max-height: none;"
    >
      <div
        class="rpl-card-cta__summary"
      >
        <p>
          Lorem ipsum dolor 
          <b>
            sit amet
          </b>
          , consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua laboris nisi ut aliquip ex ea commodo consequat.
        </p>
      </div>
    </div>
     
    <span
      class="rpl-card-cta__button"
    >
      See event details
    </span>
     
    <!---->
  </div>
   
  <!---->
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Emergency Contact Default 1`] = `
<div
  class="rpl-card-emergency"
>
  <div
    class="rpl-card-emergency__content"
  >
    <div
      class="rpl-card-emergency__subtitle"
    >
      <span>
        Urgent
      </span>
    </div>
     
    <h2
      class="rpl-card-emergency__title"
    >
      Emergency Assistance
    </h2>
     
    <p
      class="rpl-card-emergency__summary"
    >
      Dial 000 for police, fire & ambulance
    </p>
  </div>
   
  <div
    class="rpl-card-emergency__cta"
  >
    <span
      class="rpl-card-emergency__separator"
    />
     
    <a
      class="rpl-link rpl-card-emergency__cta-link"
      data-print-url="tel:000"
      href="tel:000"
    >
      <svg
        aria-hidden="true"
        class="rpl-icon rpl-icon--phone_number rpl-icon--color_primary"
        overflow="visible"
        style="width: 14.700000000000001px; height: 14.700000000000001px;"
        viewBox="0 0 14 14"
      >
        <path
          d="M13.7383 10.6808L11.4212 8.35068C11.0707 7.99766 10.499 7.99766 10.1485 8.34889L8.0893 10.4069L3.59525 5.91543L5.65712 3.85477C6.00766 3.50444 6.00855 2.93582 5.65802 2.58459L3.33908 0.263422C2.98765 -0.0878074 2.4187 -0.0878074 2.06727 0.263422L0.00359525 2.32499L0 2.32229C0 8.77198 5.23108 14 11.6845 14L13.7365 11.9492C14.0871 11.598 14.088 11.0321 13.7383 10.6808Z"
        />
         
      </svg>
       
      <span
        class="rpl-card-emergency__cta-link-text"
      >
        
        Call 000
      
      </span>
    </a>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Card/Card Event Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-event rpl-card-content--default rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-content__image-wrapper"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-content__image"
      height="199"
      src="https://placehold.it/304x199"
      style="object-position: 50.00% 50.25%; font-family: 'object-fit: cover; object-position: 50.00% 50.25%;';"
      width="304"
    />
  </div>
   
  <div
    class="rpl-card-content__details"
  >
    <div
      class="rpl-card-event__meta"
    >
      <div
        class="rpl-card-event__date"
      >
        10 to 11 July
      </div>
    </div>
     
    <h2
      class="rpl-card-event__title"
    >
      This is the headline of an event with a location that will stretch over over 3 lines
    </h2>
     
    <div
      class="rpl-card-event__trim-wrapper"
      style="max-height: none;"
    >
      <p
        class="rpl-card-event__summary"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua laboris nisi ut aliquip ex ea commodo consequat.
      </p>
    </div>
     
    <p
      class="rpl-card-event__location"
    >
      <svg
        aria-hidden="true"
        class="rpl-icon rpl-icon--map_marker rpl-icon--color_secondary"
        overflow="visible"
        style="width: 9px; height: 12px;"
        viewBox="0 0 12 16"
      >
        <path
          d="M0 6C0 10.41 6 16 6 16C6 16 12 10.41 12 6C12 2.7492 9.31714 0 6 0C2.68286 0 0 2.7492 0 6ZM3.75 6C3.75 4.758 4.758 3.75 6 3.75C7.242 3.75 8.25 4.758 8.25 6C8.25 7.242 7.242 8.25 6 8.25C4.758 8.25 3.75 7.242 3.75 6Z"
        />
         
      </svg>
      South Yarra
    </p>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        See event
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         details
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
          overflow="visible"
          style="width: 9.1px; height: 8.399999999999999px;"
          viewBox="0 0 13 12"
        >
          <path
            d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
          />
           
        </svg>
      </span>
    </span>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Image Navigation Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-image-navigation rpl-card-content--inline rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-content__image-wrapper"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-content__image"
      height="199"
      src="https://placehold.it/304x199"
      style="object-position: 50.00% 50.25%; font-family: 'object-fit: cover; object-position: 50.00% 50.25%;';"
      width="304"
    />
  </div>
   
  <div
    class="rpl-card-content__details"
  >
    <div
      class="rpl-card-image-navigation__details"
    >
      <div
        class="rpl-card-image-navigation__meta"
      >
        <div
          class="rpl-card-image-navigation__date"
        >
          23 March
        </div>
         
        <div
          class="rpl-card-image-navigation__tag"
        >
          Community
        </div>
      </div>
       
      <h2
        class="rpl-card-image-navigation__title"
      >
        This heading could wrap over two lines
      </h2>
       
      <p
        class="rpl-card-image-navigation__summary"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua laboris nisi ut aliquip ex ea commodo consequat.
      </p>
    </div>
     
    <div
      class="rpl-card-content__link"
    >
      <span>
        <span>
          Call to
        </span>
         
        <span
          class="rpl-text-icon__group"
        >
           action
          <svg
            aria-hidden="true"
            class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
            overflow="visible"
            style="width: 9.1px; height: 8.399999999999999px;"
            viewBox="0 0 13 12"
          >
            <path
              d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
            />
             
          </svg>
        </span>
      </span>
    </div>
  </div>
   
  <!---->
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Keydates Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-keydates rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <!---->
   
  <div
    class="rpl-card-content__details"
  >
    <h2
      class="rpl-card-keydates__title"
    >
      Key calendar dates
    </h2>
     
    <div
      class="rpl-card-keydates__keydate"
    >
      <div
        class="rpl-card-keydates__keydate-date"
      >
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
          overflow="visible"
          style="width: 18px; height: 18px;"
          viewBox="0 0 18 18"
        >
          <path
            clip-rule="evenodd"
            d="M2 16H16V5H2V16ZM17 2H15V1.01C15 0.452 14.553 0 14 0C13.447 0 13 0.452 13 1.01V2H5V1.01C5 0.452 4.553 0 4 0C3.447 0 3 0.452 3 1.01V2H1C0.447 2 0 2.447 0 3V17C0 17.552 0.447 18 1 18H17C17.553 18 18 17.552 18 17V3C18 2.447 17.553 2 17 2ZM10 14.021H14V10.021H10V14.021Z"
            fill-rule="evenodd"
          />
           
        </svg>
         
        <span>
          3 April
        </span>
      </div>
       
      <h3
        class="rpl-card-keydates__keydate-title"
      >
        Term two starts
      </h3>
       
      <p
        class="rpl-card-keydates__keydate-description"
      >
        Its back to the classroom as school start term two on the 16th April.
      </p>
    </div>
    <div
      class="rpl-card-keydates__keydate"
    >
      <div
        class="rpl-card-keydates__keydate-date"
      >
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
          overflow="visible"
          style="width: 18px; height: 18px;"
          viewBox="0 0 18 18"
        >
          <path
            clip-rule="evenodd"
            d="M2 16H16V5H2V16ZM17 2H15V1.01C15 0.452 14.553 0 14 0C13.447 0 13 0.452 13 1.01V2H5V1.01C5 0.452 4.553 0 4 0C3.447 0 3 0.452 3 1.01V2H1C0.447 2 0 2.447 0 3V17C0 17.552 0.447 18 1 18H17C17.553 18 18 17.552 18 17V3C18 2.447 17.553 2 17 2ZM10 14.021H14V10.021H10V14.021Z"
            fill-rule="evenodd"
          />
           
        </svg>
         
        <span>
          23 April
        </span>
      </div>
       
      <h3
        class="rpl-card-keydates__keydate-title"
      >
        ANZAC Day
      </h3>
       
      <p
        class="rpl-card-keydates__keydate-description"
      >
        National day of remembrance to commemorate the ANZACs.
      </p>
    </div>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        Read
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         more
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
          overflow="visible"
          style="width: 9.1px; height: 8.399999999999999px;"
          viewBox="0 0 13 12"
        >
          <path
            d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
          />
           
        </svg>
      </span>
    </span>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Navigation Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-navigation rpl-card-content--no-image rpl-card-content--simple rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <!---->
   
  <div
    class="rpl-card-content__details"
  >
    <h2
      class="rpl-card-navigation__title rpl-card-navigation__title--with-summary"
    >
      First navigation card
    </h2>
     
    <p
      class="rpl-card-navigation__summary"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        Read
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         more
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
          overflow="visible"
          style="width: 9.1px; height: 8.399999999999999px;"
          viewBox="0 0 13 12"
        >
          <path
            d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
          />
           
        </svg>
      </span>
    </span>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Navigation Featured Default 1`] = `
<a
  class="rpl-link rpl-card-navigation-featured"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-navigation-featured__inner"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-navigation-featured__image"
      height="497"
      src="https://placehold.it/818x497"
      style="object-position: 50.00% 49.90%; font-family: 'object-fit: cover; object-position: 50.00% 49.90%;';"
      width="818"
    />
     
    <div
      class="rpl-card-navigation-featured__meta_and_title rpl-card-navigation-featured__meta_and_title--image rpl-card-navigation-featured__meta_and_title--summary"
    >
      <div
        class="rpl-card-navigation-featured__meta"
      >
        <span
          class="rpl-card-navigation-featured__date"
        >
          23 March
        </span>
         
        <span
          class="rpl-card-navigation-featured__tag"
        >
          Community
        </span>
      </div>
       
      <h2
        class="rpl-card-navigation-featured__title"
      >
        <span>
          This is display copy that wraps 2 lines
        </span>
      </h2>
    </div>
  </div>
   
  <p
    class="rpl-card-navigation-featured__summary rpl-card-navigation-featured__summary--image"
  >
    We are looking at ways to make housing more affordable and renting more secure. Tell us what works for you or find out what's happening.
  </p>
   
  <svg
    aria-hidden="true"
    class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_white"
    overflow="visible"
    style="width: 13px; height: 12px;"
    viewBox="0 0 13 12"
  >
    <path
      d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
    />
     
  </svg>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Profile Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-profile rpl-card-content--no-image rpl-card-content--default rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <!---->
   
  <div
    class="rpl-card-content__details"
  >
    <div
      class="rpl-card-profile__inner"
    >
      <img
        alt=""
        class="rpl-card-profile__image"
        src="[object Object]"
      />
       
      <h2
        class="rpl-card-profile__name rpl-card-profile__name--no-margin"
      >
        Stella Young
      </h2>
       
      <p
        class="rpl-card-profile__lifespan"
      >
        (1982 - 2014)
      </p>
       
      <p
        class="rpl-card-profile__induction"
      >
        <span>
          Inducted
        </span>
         
        <span>
          2017
        </span>
      </p>
       
      <p
        class="rpl-card-profile__summary"
      >
        Journalist, comedian, feminist and fierce disability activist.
      </p>
    </div>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        Read Stella's
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         profile
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
          overflow="visible"
          style="width: 9.1px; height: 8.399999999999999px;"
          viewBox="0 0 13 12"
        >
          <path
            d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
          />
           
        </svg>
      </span>
    </span>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Promotion Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-promotion rpl-card-content--default rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-content__image-wrapper"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-content__image"
      height="199"
      src="https://placehold.it/304x199"
      style="object-position: 50.00% 50.25%; font-family: 'object-fit: cover; object-position: 50.00% 50.25%;';"
      width="304"
    />
  </div>
   
  <div
    class="rpl-card-content__details"
  >
    <div
      class="rpl-card-promotion__meta"
    >
      <div
        class="rpl-card-promotion__date"
      >
        23 March
      </div>
       
      <div
        class="rpl-card-promotion__tag"
      >
        News
      </div>
    </div>
     
    <h2
      class="rpl-card-promotion__title"
    >
      This is display copy that wraps 2 lines
    </h2>
     
    <div
      class="rpl-card-promotion__trim-wrapper"
      style="max-height: none;"
    >
      <p
        class="rpl-card-promotion__summary"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua laboris nisi ut aliquip ex ea commodo consequat.
      </p>
    </div>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        Read
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         more
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
          overflow="visible"
          style="width: 9.1px; height: 8.399999999999999px;"
          viewBox="0 0 13 12"
        >
          <path
            d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
          />
           
        </svg>
      </span>
    </span>
  </div>
</a>
`;
